Links spacing fixed

--- a/src/Stylesheets/ProjectItems.css
+++ b/src/Stylesheets/ProjectItems.css
@@ -88,11 +88,16 @@
 	color: black;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
+	width: 100%
 }
 
 a {
 	color: white;
-	margin: 20px
+	text-decoration: none
+}
+
+a:hover {
+	text-decoration: underline
 }
 
 @media (max-width: 650px) {
